chore: workspace resource and resource build API changes
